samples/_failures_safe/1761258122_7518ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23913341.c: In function ‘prim’:
./samples/SAFE/__tmp_23913341.c:144:5: error: expected expression at end of input
  144 |     int* key =
      |     ^~~
./samples/SAFE/__tmp_23913341.c:144:5: error: expected declaration or statement at end of input
